name:                fcc
version:             0.2.0.0
synopsis:            Featherweight C compiler
-- description:         
homepage:            https://github.com/vvolochay/Compilers
license:             PublicDomain
license-file:        LICENSE
author:              Andrey Komarov
maintainer:          taukus@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.20

executable fcc
  main-is:           Main.hs
  other-modules:     FCC.Parser, FCC.Lexer, FCC.Expr, FCC.Program,
                     FCC.Type, FCC.Stdlib, FCC.TypecheckError, FCC.Typecheck
  build-depends:     base >=4.8 && <5, array, containers, mtl, bound, prelude-extras
  build-tools:       happy, alex
  hs-source-dirs:    src
  default-language:  Haskell2010
